[package]
name = "question"
version = "0.2.2"
authors = ["Derek Goddeau <d.j.goddeau@gmail.com>"]
description = "Library that provides a type for questions and answers."
documentation = "https://docs.rs/question/"
homepage = "https://github.com/sevro/question"
repository = "https://github.com/sevro/question"
license = "MIT"
readme = "README.md"
keywords = ["question", "ask", "answer", "cli", "prompt"]
categories = ["command-line-utilities", "command-line-interface"]

[badges]
github = { repository = "sevro/question", branch = "master" }
appveyor = { repository = "sevro/question", branch = "master", service = "github" }
codecov = { repository = "sevro/question", branch = "master", service = "github" }
maintenance = { status = "passively-maintained" }

[dependencies]
clippy = {version = "0.0.169", optional = true}

[features]
default = []
strict = ["clippy"]
